# quickport

./: .gitignore  package-lock.json  package.json  tsconfig.json
.github/workflows/: test.yml
docs/adr/: 0001-prd-tag-severity-trace-crosswalk.md
docs/security/: threat-model.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/cli/: index.ts
src/install-pipeline/: index.ts  pipeline.ts  types.ts
src/install-pipeline/tests/: decision-gate.test.ts
src/installer/: lark-token-migration.ts  lark-token-verifier.ts  preflight-check.ts
src/marketplace-adapter/: index.ts  types.ts
src/marketplace-adapter/sources/: git-source.ts  local-dir-source.ts
src/mcp/servers/feishu/: index.ts  manifest.json
src/mcp/servers/feishu-demo/: index.ts  manifest.json
src/orchestrator/audit/: audit-log.ts
src/orchestrator/capability-registry/: index.ts
src/orchestrator/credentials/: keychain-adapter.ts
src/orchestrator/mcp/: mcp-spawner.ts
src/orchestrator/quick-config-patcher/: index.ts
src/scanner/: cli.ts  engine.ts  formatter.ts  index.ts  manifest.ts  semgrep-runner.ts  types.ts
src/scanner/modules/: dangerous-api.ts  fs-diff.ts  manifest-validation.ts  narrow-waist-bypass.ts  network-diff.ts  process-spawn.ts  sbom-cve.ts  secrets-scan.ts
src/scanner/tests/: scanner.test.ts
src/scanner/tests/fixtures/bad-skill/: index.js  manifest.json
src/scanner/tests/fixtures/clean-skill/: manifest.json
tools/scanner/rules/: quickwork-scanner-rules-draft.md  quickwork-semgrep-rules.yml
