[package]
name = "quickport"
version = "0.1.0"
description = "QuickPort — Amazon Quick companion for China ecosystem"
authors = ["QuickPort Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quickport_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# this feature is used for production builds or when `devtools` feature is not enabled
default = ["custom-protocol"]
# this feature is used for dev builds
custom-protocol = ["tauri/custom-protocol"]
